--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.2.1
   shared_preferences:
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
